# quadruped_isaac_sim

./: .gitignore  MIGRATION.md  README.md
docker/: .dockerignore  Dockerfile  README.md  build_docker.sh  push_docker.sh  run_unige_docker.sh
scripts/: make_transfer_bundle.sh  run_isaac.sh  setup_3d_mapping.sh
spot_sar_bringup/: package.xml  setup.cfg  setup.py
spot_sar_bringup/config/: elevation_spot_building.yaml
spot_sar_bringup/launch/: building_mission.launch.py  elevation.launch.py  floor_mission.launch.py  mapping.launch.py  mapping3d.launch.py  mission.launch.py  perception.launch.py  rviz.launch.py  sar_system.launch.py  sim.launch.py
spot_sar_bringup/rviz/: sar.rviz  sar_3d.rviz
spot_sar_description/: CMakeLists.txt  package.xml
spot_sar_description/launch/: description.launch.py
spot_sar_description/urdf/: spot_sensors.urdf
spot_sar_executive/: package.xml  setup.cfg  setup.py
spot_sar_executive/spot_sar_executive/: executive.py
spot_sar_msgs/: CMakeLists.txt  package.xml
spot_sar_msgs/action/: Skill.action
spot_sar_msgs/msg/: Victim.msg  VictimArray.msg  WorldModel.msg
spot_sar_nav/: package.xml  setup.cfg  setup.py
spot_sar_nav/config/: nav2_params.yaml  slam_toolbox.yaml
spot_sar_nav/launch/: nav2.launch.py  skills.launch.py  slam.launch.py
spot_sar_nav/spot_sar_nav/: frontier_explorer.py  scan_tilt_gate.py  skill_server.py
spot_sar_perception/: package.xml  setup.cfg  setup.py
spot_sar_perception/spot_sar_perception/: detector_node.py  yolo_detector_node.py
spot_sar_planning/: package.xml  setup.cfg  setup.py
spot_sar_planning/pddl/: domain.pddl  domain_building.pddl  domain_doors.pddl  problem_example.pddl
spot_sar_planning/spot_sar_planning/: building_world_model_node.py  floor_world_model_node.py  planner.py  sar_building.py  sar_floor.py  world_model_node.py
spot_sar_sim/: package.xml  setup.cfg  setup.py
spot_sar_sim/spot_sar_sim/: teleop_keyboard.py
spot_sar_sim/spot_sar_sim/standalone/: replicator_sar_sdg.py  (+6 more)
